# nodriver-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nodriver_mcp/: cli.py  installer.py  installer_data.py  installer_tui.py  server.py
